# Cross_Process_Hook

./: CMakeLists.txt  README.md  main.cpp  sample.cpp
ControlBlockManager/: ControlBlockBase.cpp  ControlBlockBase.h  SocketControlBlock.cpp  SocketControlBlock.h
DataStruct/: DataStruct.cpp  DataStruct.h
DllFuncRVAReader/: RVAReaderBase.cpp  RVAReaderBase.h  ReadFromFile.cpp  ReadFromFile.h  ReadFromMemory.cpp  ReadFromMemory.h
ProcessHooker/: HookBase.cpp  HookBase.h  HookPoint.cpp  HookPoint.h  Hook_Socket_TCP.cpp  Hook_Socket_TCP.h  Hook_Socket_UDP.cpp  Hook_Socket_UDP.h  ProcessHookBase.cpp  ProcessHookBase.h  SocketHook.cpp  SocketHook.h
ProcessHooker/ControlBlockManager/: ControlBlockBase.cpp  ControlBlockBase.h  ControlBlock_Socket_TCP.cpp  ControlBlock_Socket_TCP.h  ControlBlock_Socket_UDP.cpp  ControlBlock_Socket_UDP.h
ProcessHooker/ControlBlockManager/ModuleFuncAddrReader/: ReaderBase.cpp  ReaderBase.h  Reader_FromFile.cpp  Reader_FromFile.h  Reader_FromMemory.cpp  Reader_FromMemory.h
ProcessHooker/ShellCodeMaker/: ShellCodeBase.cpp  ShellCodeBase.h  ShellCode_Socket_TCP_X86.cpp  ShellCode_Socket_TCP_X86.h  ShellCode_Socket_UDP_X86.cpp  ShellCode_Socket_UDP_X86.h
ShellCodeMaker/: ShellCodeBase.cpp  ShellCodeBase.h  SocketShellCodeX86.cpp  SocketShellCodeX86.h
Utils/: AutoMemoryManager.cpp  AutoMemoryManager.h  MemoryManager.cpp  MemoryManager.h  MyException.cpp  MyException.h  ProcessUtils.cpp  ProcessUtils.h  StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h
include/: ControlBlockManager.cpp  ControlBlockManager.h  Cross_Process_Hook.cpp  Cross_Process_Hook.h  Data_Struct.cpp  Data_Struct.h  DllFunctionRVAReader.cpp  DllFunctionRVAReader.h  PreProcess.cpp  PreProcess.h  ShellCodeMaker.cpp  ShellCodeMaker.h
